--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,6 @@
 steps:
+  - name: 'gcr.io/cloud-builders/npm'
+    args: ['install']
   - name: "gcr.io/cloud-builders/npm"
     args: ["run", "build", "--prod"]
   - name: gcr.io/cloud-builders/gsutil
